--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,24 @@
 
 :root {
     --main-bg: #232225;
-    --header-bg: #424242;
+    --nav-bg: #424242;
     --header-close-button: #fff;
-    --nav-logout-button-color: #B8B8B8;
+    --close-bg-color:#545454;
+    --package-bg-color: #1dbba5;
+    --nav-img-main-color: #b8b8b8;
+    --nav-img-second-color: #1dbba5;
+    --nav-logout-bg-color: #B8B8B8;
+    --username-font-color: #fff;
+    --membership-font-color:#cacaca;
+
+    --package-info-font: #fff;
 
     --nav-font-main-color: #b8b8b8;
     --nav-menu-home-font-color: #1dbba5;
     --nav-subtitle-font-color: #545454;
     --nav-upgrade-font-color: #cbcbcb;
-    --nav-logout-font-color:#181818;
+    --nav-logout-font-color: #181818;
+    
 
 }
 
@@ -24,11 +33,11 @@
 }
 
 main {
-    background-color: var(--main-bg);
+    background-color: var(--nav-bg);
 }
 
 nav {
-    background-color: var(--header-bg);
+    background-color: var(--nav-bg);
 }
 
 .dflex {
@@ -36,16 +45,27 @@ nav {
 }
 
 
-/***** NAV CONTENT *****/
+/**************** NAV CONTENT ****************/
 
 .nav-container {
+    height: 100%;
     max-width: 257px;
-    padding: 32px;
 }
 
 .nav-info-container {
     width: 100%;
     height: 289px;
+    padding: 32px 32px 0;
+}
+
+.header-menu-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pacto-logo-container{
+    display: flex;
+    align-items: center;
 }
 
 .pactto-header-logo {
@@ -54,24 +74,63 @@ nav {
     cursor: pointer;
 }
 
+
 .close-button-container {
     width: 40px;
     height: 40px;
+    margin-right: -24px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: end;
 }
 
-.header-close-button {
-    width: 24px;
+
+.close-button-pos {
+    margin-top: 20px 0 0 10px;
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: var(--header-close-button);
-
 }
 
-.subtitle h2{
+.close-button-pos p {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+
+.close-button-pos:hover {
+    border-radius: 50%;
+    background-color: var(--close-bg-color);
+    cursor: pointer;
+}
+
+
+.user-info-conainer {
+    height: 172px;
+    padding-top: 42px;
+    padding-bottom: 12px;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.subtitle h2 {
     font-size: 14px;
+    font-weight: 700;
     text-transform: uppercase;
-    color:var(--nav-subtitle-font-color);
+    color: var(--nav-subtitle-font-color);
     margin-top: 8px;
 }
 
+.user-acc-info {
+    width: 193px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
 
 .userAvatarImg {
     width: 40px;
@@ -79,16 +138,116 @@ nav {
     cursor: pointer;
 }
 
+.user-acc-info{
+    display: flex;
+}
+
+.business-chart{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    justify-content: center;
+}
+
+.trial-info {
+    color: var(--nav-upgrade-font-color);
+    line-height: 7px;
+    font-size: 7px;
+    text-transform: uppercase;
+    letter-spacing: .5px;
+    font-weight: 600;
+    opacity: .7;
+    margin-bottom: 3px;
+    margin-top: -5px;
+}
+
+.pactto-package {
+    width: 142px;
+    height: 24px;
+    display: flex;
+}
+
+
+.package-info {
+    width: 108px;
+    height: fit-content;
+    padding: 6px;
+    border-radius: 3px;
+    color: var(--package-info-font);
+    background-color: var(--package-bg-color);
+    line-height: 12px;
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+}
+
+.upgrade-container{
+    width: 44px;
+    height: 24px;
+}
+
+.upgrade-text{
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    text-decoration: underline;
+    color: var(--nav-upgrade-font-color);
+    margin-left: 10px;
+}
+
+.user-name-container{
+    height: 70px;
+    width: 194px;
+}
+
+.user-name-text{
+    text-transform:capitalize;
+    color: var(--username-font-color);
+}
+
+.user-name-text h2{
+    font-size: 20px;
+    margin-top: 28px;
+}
+
+.membership-container{
+    width: 194px;
+    height: 20px;
+}
+
+.membership-text{
+    font-size: 14px;
+    color: var(--membership-font-color);
+    letter-spacing: .25px;
+}
+
+
+
+
+/**************** NAV MENU CONTENT ****************/
+
 .nav-menu-container {
     width: 100%;
     height: 496px;
 }
 
+
 .nav-menu {
     width: 100%;
     height: 48px;
     align-items: center;
+    padding-left: 32px;
+    cursor: pointer;
 }
+
+.nav-menu img {
+    width: 24px;
+    margin-right: 10px;
+}
+
 
 .nav-active-menu {
     width: 100%;
@@ -96,34 +255,45 @@ nav {
     align-items: center;
 }
 
-.nav-active-menu h3{
+.nav-active-menu h3 {
     font-size: 14px;
     font-weight: 400;
     color: var(--nav-menu-home-font-color);
 }
 
-
-.nav-menu-container img{
+.nav-menu-active img {
     width: 24px;
     margin-right: 10px;
+    background-color: var(--nav-img-second-color);
 }
 
-.nav-menu-container h3{
+.nav-menu-container h3 {
     font-size: 14px;
     font-weight: 400;
     color: var(--nav-font-main-color);
 }
 
+.flex-grow {
+    height: 46px;
+}
+
 .logout-container {
     width: 100%;
     min-width: 64px;
-    height: 48px;
-    background-color: var(--nav-logout-button-color);
+    padding: 16px 32px;
+}
+
+.logout-text {
     color: var(--nav-logout-font-color);
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    width: 100%;
+    height: 48px;
+    background-color: var(--nav-logout-bg-color);
     border-radius: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: 600;
-    text-transform: uppercase;
 }
