--- a/src/App.css
+++ b/src/App.css
@@ -5,24 +5,34 @@
 :root {
     --main-bg: #232225;
     --nav-bg: #424242;
+    --header-bg: #424242;
     --header-close-button: #fff;
+    --todo-bg-color:#545454;
+    --todoDone-bg-color: #1dbba5;
     --close-bg-color:#545454;
     --package-bg-color: #1dbba5;
+    --upload-video-bg-color:#1dbba5;
+    --nav-logout-bg-color: #B8B8B8;
+    
+
     --nav-img-main-color: #b8b8b8;
     --nav-img-second-color: #1dbba5;
-    --nav-logout-bg-color: #B8B8B8;
+
     --username-font-color: #fff;
     --membership-font-color:#cacaca;
-
+    --upload-font-color: #232225;
     --package-info-font: #fff;
-
     --nav-font-main-color: #b8b8b8;
     --nav-menu-home-font-color: #1dbba5;
     --nav-subtitle-font-color: #545454;
     --nav-upgrade-font-color: #cbcbcb;
     --nav-logout-font-color: #181818;
+    --li-font-color: #fff;
+    --li-todo-done-text: #b8b8b8;
+    --welcoming-font-color: #fff;
+    --search-placeholder-color: #b8b8b8;
     
-
+    
 }
 
 * {
@@ -32,8 +42,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
-main {
-    background-color: var(--nav-bg);
+
+.main-container {
+    height: 100vh;
+    max-height: 100%;
+    width: calc(100vw - 257px);
+    background-color: var(--main-bg);
 }
 
 nav {
@@ -42,6 +56,16 @@ nav {
 
 .dflex {
     display: flex;
+}
+
+.mb10 {
+    margin-bottom: 5px;
+}
+
+a,
+a:hover {
+    text-decoration: none;
+    color: unset;
 }
 
 
@@ -255,7 +279,7 @@ nav {
     align-items: center;
 }
 
-.nav-active-menu h3 {
+.active-menu h3 {
     font-size: 14px;
     font-weight: 400;
     color: var(--nav-menu-home-font-color);
@@ -267,14 +291,14 @@ nav {
     background-color: var(--nav-img-second-color);
 }
 
-.nav-menu-container h3 {
+.inactive-menu h3 {
     font-size: 14px;
     font-weight: 400;
     color: var(--nav-font-main-color);
 }
 
 .flex-grow {
-    height: 46px;
+    height: 36px;
 }
 
 .logout-container {
@@ -285,7 +309,7 @@ nav {
 
 .logout-text {
     color: var(--nav-logout-font-color);
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -296,4 +320,76 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+/******************** SEARCH INPUT ********************/
+.search-container{
+    height: 76px;
+    max-width: 100vw;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search-box {
+    height: 56px;
+    width: 100%;
+    display: flex;
+    border: 1px solid var(--search-placeholder-color);
+    border-radius: 4px;
+    cursor: text;
+}
+
+.search {
+    height: 54px;
+    width: calc(100% - 52px);
+    margin: 0 auto;
+}
+
+.search-input{
+    height: 54px;
+    width: calc(100% - 52px);
+    cursor: text;
+    border: none;
+    background-color: var(--main-bg);
+    outline: none;
+    color: var(--search-placeholder-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 48px;
+    padding: 16px;
+}
+
+.search-input::placeholder{
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 48px;
+    color: var(--search-placeholder-color);
+}
+
+.search-img {
+    height: 54px;
+    width: 52px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
+
+}
+
+.search-img img{
+    padding: 12px;
+    height: 48px;
+    width: 48px;
+}
+
+.search-box:hover{
+    border: 1px solid #fff;
+}
+
+.search-box:focus-within{
+    border: 1px solid #1dbba5;
 }
