--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
 }
 
 nav {
+    height: 100vh;
     background-color: var(--nav-bg);
 }
 
@@ -72,20 +73,21 @@ a:hover {
 /**************** NAV CONTENT ****************/
 
 .nav-container {
-    height: 100%;
+    height: auto;
     max-width: 257px;
 }
 
 .nav-info-container {
     width: 100%;
     height: 289px;
-    padding: 32px 32px 0;
+    padding: 37px 32px 0;
 }
 
 .header-menu-container {
     display: flex;
     justify-content: space-between;
 }
+
 
 .pacto-logo-container{
     display: flex;
@@ -255,7 +257,8 @@ a:hover {
 
 .nav-menu-container {
     width: 100%;
-    height: 496px;
+    height: 510px;
+    padding-top: 5px;
 }
 
 
@@ -298,7 +301,7 @@ a:hover {
 }
 
 .flex-grow {
-    height: 36px;
+    height: 30px;
 }
 
 .logout-container {
