--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
     --nav-img-main-color: #b8b8b8;
     --nav-img-second-color: #1dbba5;
 
+    --primary-font-color: #1dbba5;
     --username-font-color: #fff;
     --membership-font-color:#cacaca;
     --button-font-color: #232225;
@@ -48,8 +49,8 @@
 
 
 .main-container {
-    max-height: 100%;
-    width: calc(100vw - 257px);
+    height: 911px;
+    width: 100%;
     background-color: var(--main-bg);
 }
 
@@ -305,7 +306,7 @@ a:hover {
 }
 
 .flex-grow {
-    height: 30px;
+    height: 32px;
 }
 
 .logout-container {
