--- a/src/routes/videosToReview/videosToReview.css
+++ b/src/routes/videosToReview/videosToReview.css
@@ -1,6 +1,6 @@
-.container {
-    height: 100vh;
-    width: 100vw;
+.containerVR {
+    height: 911px;
+    width: 100%;
     background-color: var(--main-bg);
     color: #fff;
     padding: 32px;
